--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   kosher_dart: ^2.0.11
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
